Adding support for import modules to JShell.