@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -356,6 +356,25 @@ public class StartOptionTest {
                 null,
                 s -> assertTrue(s.trim().startsWith("jshell>"), "Expected prompt, got: " + s),
                 "--show-version");
+    }
+
+    public void testPreviewEnabled() {
+        String fn = writeToFile("System.out.println(\"prefix\");\n" +
+                "System.out.println(MethodHandle.class.getName());\n" +
+                "System.out.println(\"suffix\");\n" +
+                "/exit\n");
+        startExCoUoCeCn(e -> assertEquals(e.intValue(), 0),
+                        s -> {},
+                        s -> assertEquals(s, "prefix\nsuffix\n"),
+                        s -> {},
+                        s -> {},
+                        fn);
+        startExCoUoCeCn(e -> assertEquals(e.intValue(), 0),
+                        s -> {},
+                        s -> assertEquals(s, "prefix\njava.lang.invoke.MethodHandle\nsuffix\n"),
+                        s -> {},
+                        s -> {},
+                        "--enable-preview", fn);
     }
 
     @AfterMethod
